# gsoc-proposal

./: README.md
code_examples/gnuradio/gr-emulate_hardware/: CMakeLists.txt
code_examples/gnuradio/gr-emulate_hardware/cmake/Modules/: emulate_hardwareConfig.cmake
code_examples/gnuradio/gr-emulate_hardware/docs/: README.emulate_hardware
code_examples/gnuradio/gr-emulate_hardware/docs/doxygen/: Doxyfile.in
code_examples/gnuradio/gr-emulate_hardware/docs/doxygen/other/: group_defs.dox  main_page.dox
code_examples/gnuradio/gr-emulate_hardware/grc/: CMakeLists.txt  emulate_hardware_readIQ_c.xml
code_examples/gnuradio/gr-emulate_hardware/include/emulate_hardware/: CMakeLists.txt  api.h  readIQ_c.h
code_examples/gnuradio/gr-emulate_hardware/lib/: CMakeLists.txt  qa_emulate_hardware.cc  qa_emulate_hardware.h  readIQ_c_impl.cc  readIQ_c_impl.h  test_emulate_hardware.cc
code_examples/gnuradio/gr-emulate_hardware/python/: CMakeLists.txt  __init__.py  qa_readIQ_c.py  save_qa_readIQ_c.py  save_qa_readIQ_c_2.py  save_qa_readIQ_c_3.py
code_examples/gnuradio/gr-emulate_hardware/swig/: CMakeLists.txt  emulate_hardware_swig.i
code_examples/gnuradio/module_classify/flowchart/: flowchart.grc
code_examples/gnuradio/module_classify/gr-classify/: CMakeLists.txt
code_examples/gnuradio/module_classify/gr-classify/cmake/Modules/: classifyConfig.cmake
code_examples/gnuradio/module_classify/gr-classify/docs/: README.classify
code_examples/gnuradio/module_classify/gr-classify/docs/doxygen/: Doxyfile.in
code_examples/gnuradio/module_classify/gr-classify/docs/doxygen/other/: group_defs.dox  main_page.dox
code_examples/gnuradio/module_classify/gr-classify/grc/: CMakeLists.txt  classify_median_ff.xml  classify_overlap_cvc.xml  classify_overlap_fvf.xml  classify_person_vfi.xml
code_examples/gnuradio/module_classify/gr-classify/include/classify/: CMakeLists.txt  api.h  median_ff.h  overlap_cvc.h  overlap_fvf.h  person_vfi.h
code_examples/gnuradio/module_classify/gr-classify/lib/: CMakeLists.txt  median_ff_impl.cc  median_ff_impl.h  overlap_cvc_impl.cc  overlap_cvc_impl.h  overlap_fvf_impl.cc  overlap_fvf_impl.h  person_vfi_impl.cc  person_vfi_impl.h  qa_classify.cc  qa_classify.h  save.cc  save.h  test_classify.cc
code_examples/gnuradio/module_classify/gr-classify/python/: CMakeLists.txt  __init__.py  qa_median_ff.py  qa_overlap_cvc.py  qa_overlap_fvf.py  qa_person_vfi.py
code_examples/gnuradio/module_classify/gr-classify/swig/: CMakeLists.txt  classify_swig.i
code_examples/gnuradio/module_fmcw/fc_radar/: fmcw.grc  top_block.py
code_examples/gnuradio/module_fmcw/gr-radar/: CMakeLists.txt
code_examples/gnuradio/module_fmcw/gr-radar/grc/: CMakeLists.txt  radar_FFT_findpeak_max_vcf.xml  radar_FMCW_generate_IQ_cc.xml  radar_FMCW_separate_IQ_cc.xml  radar_get_phase_delta_vcf.xml
code_examples/gnuradio/module_fmcw/gr-radar/include/radar/: CMakeLists.txt  FFT_findpeak_max_vcf.h  FMCW_generate_IQ_cc.h  FMCW_separate_IQ_cc.h  get_phase_delta_vcf.h
code_examples/gnuradio/module_fmcw/gr-radar/lib/: CMakeLists.txt  FFT_findpeak_max_vcf_impl.cc  FFT_findpeak_max_vcf_impl.h  FMCW_generate_IQ_cc_impl.cc  FMCW_generate_IQ_cc_impl.h  FMCW_separate_IQ_cc_impl.cc  FMCW_separate_IQ_cc_impl.h  get_phase_delta_vcf_impl.cc  get_phase_delta_vcf_impl.h
code_examples/gnuradio/module_fmcw/gr-radar/python/: CMakeLists.txt  __init__.py  qa_FFT_findpeak_max_vcf.py  qa_FMCW_generate_IQ_cc.py  qa_FMCW_separate_IQ_cc.py  qa_get_phase_delta_vcf.py
code_examples/gnuradio/module_fmcw/gr-radar/swig/: CMakeLists.txt  radar_swig.i
code_examples/matlab/: flowchart_radar_simulator.m  fmcw_detection.m  tracking.m
gr-radar_proof-of-concept/: CMakeLists.txt
gr-radar_proof-of-concept/cmake/Modules/: radarConfig.cmake
gr-radar_proof-of-concept/examples/: simulator_cw.grc  top_block.py
gr-radar_proof-of-concept/grc/: CMakeLists.txt  radar_decimator_cc.xml  radar_est_v_cw.xml  radar_os_cfar_c.xml  radar_signal_generator_cw_c.xml  radar_simulator_cc.xml  radar_tsfft_cc.xml
gr-radar_proof-of-concept/include/radar/: CMakeLists.txt  decimator_cc.h  est_v_cw.h  os_cfar_c.h  signal_generator_cw_c.h  simulator_cc.h  tsfft_cc.h
gr-radar_proof-of-concept/lib/: CMakeLists.txt  decimator_cc_impl.cc  decimator_cc_impl.h  est_v_cw_impl.cc  est_v_cw_impl.h  os_cfar_c_impl.cc  os_cfar_c_impl.h  signal_generator_cw_c_impl.cc  signal_generator_cw_c_impl.h  simulator_cc_impl.cc  simulator_cc_impl.h  tsfft_cc_impl.cc  tsfft_cc_impl.h
gr-radar_proof-of-concept/python/: CMakeLists.txt  qa_decimator_cc.py  qa_est_v_cw.py  qa_os_cfar_c.py  qa_signal_generator_cw_c.py  qa_simulator_cc.py  qa_tsfft_cc.py
gr-radar_proof-of-concept/swig/: radar_swig.i
